# lorawan-network-server

./: 1.cpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY  LICENSE  Makefile.am  README.md  aes-128.c  aes-128.h  auth-file.cpp  auth-file.h  auth-user.cpp  auth-user.h  autogen.sh  client-id.cpp  client-id.h  config-filename.cpp  config-filename.h  config-json.cpp  config-json.h  configure.ac  control-packet.cpp  control-packet.h  daemonize.cpp  daemonize.h  database-config-json.cpp  database-config-json.h  db-any.cpp  db-any.h  db-fb.cpp  db-fb.h  db-identity.cpp  db-identity.h  db-intf.h  db-json.cpp  db-json.h  db-mysql.cpp  db-mysql.h  db-pg.cpp  (+159 more)
cmake/: FindPaho-C++.cmake  FindPaho.cmake
example-plugins/: plugin-esp32-demo.cpp  plugin-logger-huffman.cpp  plugin-mqtt-wss.cpp  plugin-mqtt-wss.h  plugin-pkt2.cpp
http/: README
http/php/: gw-stat.txt  post.php
proto/: pkt2.proto
proto/example/: example1.proto
proto/google/protobuf/: descriptor.proto
proto/hlogger/: gps16.proto  gps16hlogger.proto  ie_ioheader.proto  ie_ioheaderhlogger.proto  ie_location.proto  iridiumpacket46420.proto  packet46420.proto  time5hlogger.proto
proto/iridium/: animals.proto  gps16.proto  ie_ioheader.proto  ie_location.proto  packet8.proto  time5.proto
proto/logger/: logger60.proto  rec16.proto
proto/probe/: probe.proto  text.proto
proto/vega/: sh2.proto  si13.proto  si13_1.proto  si13_2.proto
service/: lorawan-network-server.service  lorawan-networkd  lorawand
tests/: dbs.js  netid-list.sh  netid-list.txt  send-huff-packets-5000.sh  send-packets-5000.sh  send-packets-via.sh  test-dev-addr.cpp  test-dir-txt.cpp  test-encrypt-join-accept-response.cpp  test-fb.cpp  test-file-watch.cpp  test-gateway-file-json.cpp  test-gateway-listen.cpp  test-identity-file-json.cpp  test-identity-lmdb.cpp  test-join-accept-decrypt.cpp  test-join-request-1.cpp  test-join-request.cpp  test-mac-gw.cpp  test-message-queue.cpp  test-packet-queue.cpp  test-pkt2-parse.cpp  test-queue-processor.cpp  test-region-band-file-json.cpp  test-sqlite.cpp  test-udp-listen.cpp  test1.cpp
tests/.deps/: test_1-test1.Po  test_identity_file_json-test-identity-file-json.Po  test_identity_lmdb-test-identity-lmdb.Po  test_packet_queue-test-packet-queue.Po  test_udp_listen-test-udp-listen.Po
tools/: send-si13.sh
